--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.NextLetterPuzzle" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.NextLetterPuzzle" parent="Theme.SplashScreen">
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
+    </style>
 </resources>
