--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,68 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="240"
+    android:viewportHeight="240">
+  <group android:scaleX="0.9"
+      android:scaleY="0.9"
+      android:translateX="12"
+      android:translateY="12">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="m153.32,54.23c1.55,-0.12 3.22,-0.03 4.76,0.13 8.02,0.83 16.37,5.13 21.44,11.46 1.08,1.35 2.13,2.74 2.99,4.24 2.64,4.57 3.99,10.09 3.4,15.36 -0.74,6.67 -4.15,12.36 -9.37,16.5 -5.34,4.23 -12.93,6.16 -19.66,5.35 -1.69,-0.21 -3.34,-0.53 -4.98,-1.02 -0.81,-0.24 -1.61,-0.51 -2.38,-0.83 -0.17,-0.07 -0.76,-0.39 -0.89,-0.38 -0.23,0.01 -0.78,0.34 -1.01,0.45l-3.38,1.47 -6.04,2.49 0.8,-8.26 0.21,-1.98c0.02,-0.17 0.1,-0.52 0.07,-0.67 -0.02,-0.09 -0.24,-0.26 -0.31,-0.33l-1.04,-1a26.45,26.45 0,0 1,-1.81 -2c-3.64,-4.45 -6.37,-9.96 -6.78,-15.76 -0.42,-5.96 1.37,-11.91 5.32,-16.44 3.29,-3.77 7.94,-6.51 12.75,-7.81 1.93,-0.52 3.92,-0.79 5.91,-0.93z"
+        android:strokeWidth="1.57447"
+        android:fillColor="#ffffff"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="m152.45,87.94c0.52,-0.06 0.97,-0.04 1.46,0.15 0.75,0.3 1.33,0.97 1.61,1.72 0.22,0.6 0.16,1.26 -0.12,1.82 -0.34,0.7 -0.92,1.09 -1.64,1.32 -0.56,0.09 -1.16,0.03 -1.67,-0.23 -0.66,-0.33 -1.23,-0.91 -1.46,-1.61 -0.2,-0.6 -0.18,-1.29 0.11,-1.85 0.37,-0.72 0.97,-1.08 1.7,-1.33zM158.93,73.46c0.48,0.05 0.94,0.17 1.35,0.43 0.49,0.31 0.92,0.81 1.04,1.39l0.02,0.1 0.04,0.22a1.98,1.98 0,0 1,-0.08 0.96c-0.26,0.76 -0.66,1.5 -0.98,2.24l-1.94,4.48c-0.36,0.85 -0.69,1.93 -1.22,2.67 -0.41,0.57 -0.92,0.77 -1.59,0.88 -0.49,-0.04 -1.02,-0.08 -1.46,-0.35 -0.51,-0.31 -0.96,-0.93 -1.07,-1.52 -0.07,-0.37 -0.02,-0.82 0.09,-1.17 0.35,-1.09 0.92,-2.17 1.37,-3.22l1.7,-3.92c0.34,-0.78 0.64,-1.7 1.12,-2.39 0.36,-0.53 1.01,-0.7 1.6,-0.8z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#000000"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m92.38,73.13c4.34,-0.25 8.77,0.39 12.93,1.56 6.3,1.77 12.48,5.34 17.15,9.92 2.81,2.75 5.16,5.93 7.08,9.36 5.88,10.51 6.49,23.54 1.92,34.64 -1.42,3.45 -3.44,6.78 -5.74,9.72 -1.37,1.75 -2.84,3.34 -4.41,4.9l-2.61,2.53c-1.51,1.57 -2.74,3.27 -3.93,5.09 -1,1.55 -1.99,3.2 -2.67,4.92 -0.38,0.97 -0.62,1.96 -0.9,2.96 -0.7,2.44 -2.3,4.07 -4.48,5.29 0.18,0.28 0.35,0.57 0.46,0.89 0.1,0.32 0.18,0.68 0.18,1.02 -0.01,1.33 -0.26,2.71 -0.39,4.03 -0.13,1.29 -0.17,2.68 -0.44,3.94a3,3 0,0 1,-0.29 0.81c-0.55,1.01 -1.5,1.55 -2.58,1.81 -0.07,0.02 -0.39,0.06 -0.43,0.1 -0.1,0.09 -0.24,0.43 -0.33,0.56 -0.29,0.46 -0.59,0.91 -0.93,1.32 -1.9,2.27 -4.36,3.59 -7.17,4.41 -1.01,0.31 -2.15,0.43 -3.2,0.5 -2.95,0.21 -6.33,-0.63 -8.79,-2.28 -1.54,-1.03 -2.94,-2.52 -3.94,-4.07a12.31,12.31 0,0 1,-0.64 -1.1l-0.56,-1.13c-0.04,-0.09 -0.11,-0.28 -0.19,-0.34 -0.11,-0.08 -0.37,-0.09 -0.51,-0.14 -0.29,-0.11 -0.6,-0.35 -0.83,-0.56 -0.61,-0.55 -1.12,-1.33 -1.15,-2.17 -0.02,-0.5 0.06,-1.03 0.11,-1.53l0.27,-2.99 0.19,-2.26c0.04,-0.47 0.05,-0.97 0.18,-1.43 0.17,-0.65 0.43,-1.05 0.88,-1.53l-1.19,-0.88c-1.19,-1.05 -2.13,-2.42 -2.55,-3.96 -0.27,-1 -0.43,-2.02 -0.75,-3.02 -0.58,-1.79 -1.31,-3.57 -2.19,-5.24 -1.36,-2.58 -2.97,-4.99 -4.8,-7.26l-2.96,-3.56c-4.8,-6.31 -7.48,-14.27 -7.97,-22.13 -0.65,-10.45 3.13,-21.23 10.05,-29.07 4.95,-5.6 11.49,-9.95 18.68,-12.06 3.1,-0.91 6.23,-1.37 9.45,-1.57z"
+        android:strokeWidth="0.135939"/>
+    <path
+        android:pathData="m78.91,174.63 l22.77,1.87c-0.59,1.2 -1.57,2.12 -2.61,2.92l-0.65,0.43c-3.2,2.08 -7,2.68 -10.71,1.89 -3.03,-0.64 -5.56,-2.36 -7.38,-4.86 -0.53,-0.72 -0.94,-1.51 -1.43,-2.26z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#4a4a4a"/>
+    <path
+        android:pathData="m76.55,168.45 l28.98,2.48 -0.21,1.99c-0.03,0.35 -0.03,0.8 -0.16,1.13 -0.09,0.21 -0.28,0.4 -0.43,0.57 -0.45,0.34 -0.87,0.59 -1.45,0.64 -0.87,0.08 -1.83,-0.05 -2.7,-0.12l-4.7,-0.4 -15.86,-1.3 -1.64,-0.14c-0.28,-0.03 -0.63,-0.03 -0.88,-0.13 -0.27,-0.11 -0.53,-0.37 -0.71,-0.59 -0.59,-0.72 -0.45,-1.43 -0.39,-2.29zM78.68,162.28c0.67,-0.07 1.37,0.08 2.03,0.14l3.86,0.32 12.51,1.02 4.06,0.33c1.43,0.12 2.83,0.27 4.26,0.23 0.2,0.3 0.49,0.7 0.57,1.06 0.12,0.53 0.01,1.15 -0.04,1.68l-0.24,2.51 -1.38,-0.13 -27.61,-2.27c0.02,-0.86 0.11,-1.73 0.2,-2.59 0.04,-0.36 0.04,-0.83 0.19,-1.16 0.32,-0.67 0.92,-0.9 1.57,-1.13z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#7c7b7b"/>
+    <path
+        android:pathData="m92.97,74.49 l4.46,0.12c9.97,0.83 19.85,5.68 26.33,13.35 0.97,1.15 1.94,2.35 2.77,3.61 4.89,7.3 7.21,16.14 6.45,24.9 -0.22,2.54 -0.64,5.14 -1.35,7.59 -1.84,6.39 -5.48,12.1 -10.01,16.92l-3.39,3.33c-1.81,1.84 -3.45,3.96 -4.84,6.13 -0.99,1.54 -1.89,3.27 -2.57,4.97 -0.43,1.07 -0.61,2.18 -0.99,3.26 -0.41,1.18 -1.17,2.26 -2.13,3.06 -0.78,0.65 -1.76,1.18 -2.77,1.36 -0.85,0.15 -1.95,-0.11 -2.82,-0.19l-5.7,-0.51 -13.07,-1.06 -3.6,-0.26c-0.56,-0.04 -1.16,0.01 -1.71,-0.12 -0.63,-0.15 -1.34,-0.68 -1.82,-1.12 -0.87,-0.8 -1.59,-1.82 -1.98,-2.94 -0.21,-0.6 -0.29,-1.24 -0.43,-1.86 -0.17,-0.72 -0.39,-1.42 -0.63,-2.12 -0.61,-1.79 -1.39,-3.5 -2.26,-5.18 -1.42,-2.72 -3.25,-5.31 -5.2,-7.68l-2.63,-3.1c-0.96,-1.23 -1.76,-2.58 -2.51,-3.94 -2.98,-5.36 -4.77,-11.45 -5.05,-17.58 -0.49,-10.66 3.27,-20.82 10.49,-28.66 5.15,-5.6 12.11,-9.62 19.51,-11.35 2.46,-0.57 4.91,-0.85 7.43,-0.96z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#06b6d4"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m87.43,129.48c0.13,-0.01 0.09,-0.01 0.2,0.01 0.18,0.04 0.36,0.09 0.45,0.26 0.1,0.18 0.14,0.5 0.2,0.71 0.14,0.49 0.38,0.95 0.67,1.37 0.9,1.31 2.19,2.1 3.75,2.39 2.63,0.49 5.26,-0.77 6.56,-3.11 0.22,-0.39 0.41,-1.34 0.77,-1.56 0.17,-0.1 0.29,-0.11 0.48,-0.06 0.18,0.04 0.36,0.2 0.44,0.37 0.18,0.4 -0.07,0.93 -0.21,1.31 -0.8,1.72 -2.17,3.14 -3.92,3.9 -1.8,0.78 -3.94,0.82 -5.76,0.09 -1.88,-0.76 -3.22,-2.1 -4,-3.96 -0.18,-0.44 -0.36,-0.92 -0.17,-1.38 0.18,-0.19 0.3,-0.27 0.55,-0.34z"
+        android:strokeWidth="0.135939"/>
+    <path
+        android:pathData="m74.59,125.19c0.19,-0.05 0.46,-0.02 0.66,-0.02 0.71,-0.01 1.42,0.07 2.1,0.25 1.23,0.33 2.49,1.02 3.13,2.16 0.37,0.66 0.46,1.58 0.23,2.31l-0.04,0.11c-0.12,0.36 -0.26,0.68 -0.48,0.98 -0.97,1.32 -2.57,1.84 -4.13,2.07 -0.87,0.08 -1.73,0.05 -2.58,-0.14 -1.28,-0.28 -2.64,-0.97 -3.36,-2.11 -0.41,-0.66 -0.61,-1.47 -0.42,-2.24l0.02,-0.09c0.12,-0.48 0.28,-0.89 0.59,-1.29 1.03,-1.31 2.68,-1.81 4.27,-1.98z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="m94.04,78.56c0.22,-0.03 0.37,-0.03 0.59,0 -0.36,0.13 -0.79,0.15 -1.17,0.22l-2.25,0.45c-3.65,0.83 -7.1,1.85 -10.39,3.67 -3.63,2.01 -6.98,4.6 -9.77,7.67 -2.54,2.8 -4.64,6.05 -6.34,9.41 -1.13,2.23 -2.1,4.49 -2.79,6.9 -0.04,0.18 -0.07,0.34 -0.17,0.5l-0.03,-0.03c0.08,-1.6 0.18,-3.15 0.48,-4.74 0.97,-5.19 3.6,-9.76 7.21,-13.55 6.42,-6.76 15.39,-10.26 24.64,-10.5z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#0572b4"/>
+    <path
+        android:pathData="m112.6,125.26c1.68,-0.11 3.41,0.32 4.77,1.34 0.79,0.59 1.34,1.32 1.46,2.32 0.09,0.76 -0.22,1.59 -0.68,2.18 -1.06,1.35 -2.81,1.8 -4.43,2.01 -1.83,0.15 -3.8,-0.18 -5.25,-1.37 -0.68,-0.56 -1.12,-1.34 -1.2,-2.22 -0.08,-0.82 0.24,-1.66 0.78,-2.28 1.14,-1.32 2.88,-1.86 4.56,-1.98z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#ffffff"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m77.75,104.59c1.94,-0.23 4.2,0.38 5.79,1.5 1.93,1.36 3.21,3.42 3.59,5.76 0.38,2.37 -0.2,4.53 -1.59,6.46 -1.45,2.01 -3.58,3.03 -5.97,3.4 -2.34,0.24 -4.5,-0.32 -6.38,-1.77 -1.7,-1.31 -2.88,-3.46 -3.14,-5.58 -0.28,-2.28 0.36,-4.75 1.8,-6.56 1.52,-1.91 3.5,-2.96 5.91,-3.21z"
+        android:strokeWidth="0.135939"/>
+    <path
+        android:pathData="m77.14,106.69c0.89,-0.04 1.72,0.15 2.47,0.65 0.74,0.5 1.26,1.39 1.4,2.27 0.16,1.04 -0.05,2.03 -0.66,2.89 -0.6,0.83 -1.41,1.19 -2.4,1.36 -0.72,0.05 -1.49,-0.04 -2.14,-0.39 -0.85,-0.46 -1.45,-1.23 -1.71,-2.16 -0.26,-0.93 -0.08,-2 0.4,-2.83 0.58,-0.99 1.56,-1.51 2.64,-1.79z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#ffffff"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m109.32,104.66c2.17,-0.1 4.2,0.52 5.93,1.83 1.84,1.38 3.07,3.5 3.37,5.78 0.31,2.38 -0.33,4.75 -1.8,6.64 -1.55,1.99 -3.61,2.93 -6.05,3.26 -0.63,0.02 -1.29,0.03 -1.91,-0.05 -2.41,-0.3 -4.43,-1.58 -5.92,-3.48 -1.33,-1.7 -2.05,-3.96 -1.77,-6.12 0.24,-1.83 0.84,-3.38 2.03,-4.81 1.58,-1.91 3.7,-2.81 6.12,-3.04z"
+        android:strokeWidth="0.135939"/>
+    <path
+        android:pathData="m107.95,107.04c0.79,-0.05 1.6,0.13 2.26,0.57 0.73,0.48 1.32,1.3 1.49,2.16 0.19,0.96 0.02,1.95 -0.53,2.76 -0.6,0.88 -1.52,1.3 -2.53,1.49 -0.96,0 -1.82,-0.13 -2.6,-0.73 -0.78,-0.6 -1.31,-1.52 -1.42,-2.5 -0.09,-0.82 0.28,-1.81 0.79,-2.45 0.66,-0.82 1.5,-1.19 2.53,-1.3z"
+        android:strokeWidth="0.135939"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
